--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon src/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\"  \"npm run client\"",
-    "heroku-postbuild": "npm install --perfix client $$ npm run build --prefix client"
+    "heroku-postbuild": "npm install --perfix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
